--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^5.2.1",
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^9.0.0"
+    "mongoose": "^9.0.0",
+    "spdy": "^4.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
