--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-validator": "^7.3.1",
+    "http2-express-bridge": "^1.0.7",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.0",
     "spdy": "^4.0.2"
